--- a/index.HTML
+++ b/index.HTML
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link href="https://diachuvoso.github.io/site-de-quimica/style.CSS" rel="stylesheet" />
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
